# evyo_eval_harness

./: .gitignore  README.md  pyproject.toml
.github/workflows/: eval.yml
docs/: adding-a-probe.md  demo.md  design.md  judge-calibration.md
evals/: goldset.yaml  nightly-hardened.yaml  nightly.yaml  qa-smoke.yaml  redteam_hallucination.yaml  redteam_jailbreak.yaml  redteam_privacy_exfiltration.yaml  redteam_prompt_injection.yaml  redteam_system_prompt_extraction.yaml  smoke.yaml
examples/: README.md  sample-scorecard.html
scripts/: generate_sample_scorecard.py
src/xeval/: __init__.py  cli.py  client.py  config.py  errors.py  gates.py  hashing.py  models.py  probes.py  reporting.py  runner.py  statistics.py  storage.py  validation.py
src/xeval/scorers/: __init__.py  builtins.py  judge.py
src/xeval/templates/: scorecard.html.j2
tests/: test_cli.py  test_client.py  test_config_and_probes.py  test_gates_and_report.py  test_hashing.py  test_judge.py  test_runner.py  test_scorers.py  test_statistics.py  test_storage.py
