[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xevyo-eval-harness"
version = "0.1.0"
description = "Deterministic black-box evaluation and red-team harness for OpenAI-compatible chat endpoints"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "Proprietary"}
authors = [{name = "Xevyo QA"}]
dependencies = [
  "httpx>=0.27,<1",
  "Jinja2>=3.1,<4",
  "jsonschema>=4.22,<5",
  "PyYAML>=6.0,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<1",
  "pytest-cov>=5,<7",
  "ruff>=0.5,<1",
]

[project.scripts]
xeval = "xeval.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
xeval = ["templates/*.j2", "templates/*.css"]

[tool.pytest.ini_options]
addopts = "-ra --strict-markers"
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
